--- a/src/app/modules/auth/edit-profile/edit-profile.page.html
+++ b/src/app/modules/auth/edit-profile/edit-profile.page.html
@@ -1,9 +1,20 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>edit-profile</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-header class="ion-no-border">
+  <div class="menu-container">
+    <img src="./../../../assets/images/wave app.svg" />
 
+    <div class="menu-icon" (click)="openMenu()">
+      <img src="./../../../assets/icon/menu.svg" />
+    </div>
+
+    <div class="menu-title">
+      <p>{{ "edit profile"|translate}}</p>
+    </div>
+
+    <div class="back-icon" routerLink="/tabs/profile">
+      <ion-icon name="arrow-forward-outline" color="primary"></ion-icon>
+    </div>
+  </div>
+</ion-header>
 <ion-content>
 
 </ion-content>
