--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -90,6 +90,14 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  /** black **/
+  --ion-color-dark-black: #000000;
+	--ion-color-dark-black-rgb: 0,0,0;
+	--ion-color-dark-black-contrast: #ffffff;
+	--ion-color-dark-black-contrast-rgb: 255,255,255;
+	--ion-color-dark-black-shade: #000000;
+	--ion-color-dark-black-tint: #1a1a1a;
 }
 
 .ion-color-primary {
@@ -128,13 +136,24 @@ ion-color-tertiary {
   --ion-color-tint: var(--ion-color-white-tint);
 }
 
-.ion-color-black {
-  --ion-color-base: var(--ion-color-black);
-  --ion-color-base-rgb: var(--ion-color-black-rgb);
-  --ion-color-contrast: var(--ion-color-black-contrast);
-  --ion-color-contrast-rgb: var(--ion-color-black-contrast-rgb);
-  --ion-color-shade: var(--ion-color-black-shade);
-  --ion-color-tint: var(--ion-color-black-tint);
+.ion-color-dark-black {
+	--ion-color-base: var(--ion-color-dark-black);
+	--ion-color-base-rgb: var(--ion-color-dark-black-rgb);
+	--ion-color-contrast: var(--ion-color-dark-black-contrast);
+	--ion-color-contrast-rgb: var(--ion-color-dark-black-contrast-rgb);
+	--ion-color-shade: var(--ion-color-dark-black-shade);
+	--ion-color-tint: var(--ion-color-dark-black-tint);
+}
+
+.primary-color {
+  color: var(--ion-color-primary) !important;
+}
+.secondary-color {
+  color: var(--ion-color-secondary) !important;
+}
+
+.dark-black-color{
+  color:var(--ion-color-dark-black) !important;
 }
 
 .fn-12 {
