--- a/src/app/modules/notifications/notifications.page.html
+++ b/src/app/modules/notifications/notifications.page.html
@@ -18,12 +18,21 @@
 
 <ion-content class="ion-padding">
   <ion-card class="ion-no-margin">
-    <ion-item *ngFor="let item of notifications">
+    <ion-item
+      *ngFor="let item of notifications"
+      [ngClass]="item.isRead ? 'isRead' : ''"
+    >
       <ul>
         <li>
           <ion-label>
             <h5 class="fn-14 dalel-regular">{{item.text}}</h5>
-            <p item-start class="fn-12 dalel-regular">{{item.date}}</p>
+            <p
+              item-start
+              class="fn-12 dalel-regular secondary-color"
+              [ngClass]="currentlangauge == 'ar' ? 'float-right' : 'float-left'"
+            >
+              {{item.date}}
+            </p>
           </ion-label>
         </li>
       </ul>
