--- a/src/global.scss
+++ b/src/global.scss
@@ -109,7 +109,6 @@
     .auth-form {
       margin: 24px 16px;
 
-
       .otp{
         font-size: 24px;
         --padding-bottom:0px !important;
@@ -194,4 +193,58 @@ ion-tab-bar{
   }
 }
 
+.float-right{
+  float: right;
+}
 
+
+.float-left{
+  float: left;
+}
+
+.menu-container {
+  position: relative;
+  img {
+    width: 100%;
+  }
+}
+
+ion-header {
+  .menu-icon {
+    position: absolute;
+    top: 30%;
+    right: 16px;
+    img {
+      width: 40px;
+      height: 40px;
+    }
+  }
+
+  .menu-title {
+    position: absolute;
+    top: 35%;
+    right: 18%;
+    font-size: 18px;
+    color: var(--ion-color-primary);
+    font-weight: bold;
+    p {
+      margin: 0px;
+    }
+  }
+.edit-icon{
+  position: absolute;
+  top: 33%;
+  left: 55px;
+  ion-icon {
+    font-size: 23px;
+  }
+}
+  .back-icon {
+    position: absolute;
+    top: 33%;
+    left: 16px;
+    ion-icon {
+      font-size: 25px;
+    }
+  }
+}
