--- a/src/app/modules/auth/edit-profile/edit-profile.page.html
+++ b/src/app/modules/auth/edit-profile/edit-profile.page.html
@@ -1,4 +1,4 @@
-<ion-header class="ion-no-border">
+<!-- <ion-header class="ion-no-border">
   <div class="menu-container">
     <img src="./../../../assets/images/wave app.svg" />
 
@@ -14,7 +14,9 @@
       <ion-icon name="arrow-forward-outline" color="primary"></ion-icon>
     </div>
   </div>
-</ion-header>
+</ion-header> -->
+<app-header [title]="'edit profile'"></app-header>
+
 <ion-content>
 
 </ion-content>
