--- a/src/app/modules/main/main.page.html
+++ b/src/app/modules/main/main.page.html
@@ -1,4 +1,4 @@
-<ion-header class="ion-no-border">
+<!-- <ion-header class="ion-no-border">
   <div class="menu-container">
     <img src="./../../../assets/images/wave app.svg" />
 
@@ -10,7 +10,9 @@
       <p>{{"main"|translate}}</p>
     </div>
   </div>
-</ion-header>
+</ion-header> -->
+
+<app-header [title]="'main'"></app-header>
 
 <ion-content>
   <div class="search-section">
