--- a/src/app/modules/notifications/notifications.page.html
+++ b/src/app/modules/notifications/notifications.page.html
@@ -1,4 +1,4 @@
-<ion-header class="ion-no-border">
+<!-- <ion-header class="ion-no-border">
   <div class="menu-container">
     <img src="./../../../assets/images/wave app.svg" />
 
@@ -14,7 +14,10 @@
       <ion-icon name="arrow-forward-outline" color="primary"></ion-icon>
     </div>
   </div>
-</ion-header>
+</ion-header> -->
+
+<app-header [title]="'notifications'"></app-header>
+
 
 <ion-content class="ion-padding">
   <ion-card class="ion-no-margin">
