--- a/src/app/modules/profile/profile.page.scss
+++ b/src/app/modules/profile/profile.page.scss
@@ -1,16 +1,45 @@
-ion-item {
-  --border-color: var(--ion-color-secondary);
-  --border-radius: 10px;
-  --border-width: 1px;
-  margin-bottom: 16px;
-  ion-icon {
-    width: 20px !important;
-    height: 20px !important;
+.profile-card-wrapper{
+
+  position: relative;
+  .picture-wrapper{
+margin: auto;
+    img{
+    
+       height: 80px;
+     }
   }
-  ion-input {
-    --color: var(--ion-color-secondary);
-    font-size: 14px;
-    margin: 0 5px;
-    --ion-font-family: "Cairo-Regular";
+  
+  ion-item {
+    --border-color: var(--ion-color-secondary);
+    --border-radius: 10px;
+    --border-width: 1px;
+    margin-bottom: 16px;
+    ion-icon {
+      width: 20px !important;
+      height: 20px !important;
+    }
+    ion-input {
+      --color: var(--ion-color-secondary);
+      font-size: 14px;
+      margin: 0 5px;
+      --ion-font-family: "Cairo-Regular";
+    }
   }
+  
+  .picture-wrapper{
+    width: 80px;
+    //border-radius: 50%;
+    //height: 80px;
+   // background: var(--ion-color-secondary);
+    margin: auto;
+   // padding: 16px;
+   // color: var(--ion-color-white);
+  
+    ion-icon{
+      font-size: 45px;
+    }
+  
+  }
+  
 }
+
