--- a/src/app/modules/auth/password/password.page.html
+++ b/src/app/modules/auth/password/password.page.html
@@ -13,7 +13,7 @@
 
       <form class="auth-form" (ngSubmit)="passwordChange()">
        
-        <ion-item lines="none">
+        <ion-item lines="none" [ngClass]="inputFocusPassword ? 'focused' : 'unfocused' ">
           <ion-icon
             item-start
             color="primary"
@@ -25,7 +25,7 @@
           ></ion-input>
         </ion-item>
 
-        <ion-item lines="none">
+        <ion-item lines="none" [ngClass]="inputFocusConfirmPassword ? 'focused' : 'unfocused' ">
           <ion-icon
             item-start
             color="primary"
