--- a/src/app/modules/main/main.page.html
+++ b/src/app/modules/main/main.page.html
@@ -1,18 +1,4 @@
-<!-- <ion-header class="ion-no-border">
-  <div class="menu-container">
-    <img src="./../../../assets/images/wave app.svg" />
-
-    <div class="menu-icon" (click)="openMenu()">
-      <img src="./../../../assets/icon/menu.svg" />
-    </div>
-
-    <div class="menu-title">
-      <p>{{"main"|translate}}</p>
-    </div>
-  </div>
-</ion-header> -->
-
-<app-header [title]="'main'"></app-header>
+<app-header [title]="'main'" [isMain]="true"></app-header>
 
 <ion-content>
   <div class="search-section">
