--- a/src/app/modules/my-reservations/my-reservations.page.html
+++ b/src/app/modules/my-reservations/my-reservations.page.html
@@ -1,9 +1,8 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>my-reservations</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header
+  [title]="'my-reservations'"
+  [isEditable]="false"
+  [backwardRoute]="'/tabs/main'"
+  [isMain]="false"
+></app-header>
 
-<ion-content>
-
-</ion-content>
+<ion-content> </ion-content>
