--- a/src/app/modules/auth/code/code.page.scss
+++ b/src/app/modules/auth/code/code.page.scss
@@ -25,23 +25,25 @@ ion-input {
     padding-top: 0px !important;
     padding-bottom: 0px !important;
   }
-  //   .native-input.sc-ion-input-ios{
-  //     padding-top
-  //   }
 }
+.focused {
+  ion-item::part(native) {
+    --background: var(--ion-color-primary) !important;
+  }
+  ion-input{
+    --color: var(--ion-color-white) !important;
+  }
+}
+
 
 ion-item::part(native) {
   padding: 6px 0px !important;
   text-align: center;
-
   .item-inner {
     padding-inline-end: 0px !important;
   }
 }
 
-// background: red;
-//     color: white;
-//     border: none;
 .code-verification-container {
   display: flex;
   justify-content: space-between;
