--- a/src/app/modules/auth/edit-profile/edit-profile.page.html
+++ b/src/app/modules/auth/edit-profile/edit-profile.page.html
@@ -1,22 +1,109 @@
-<!-- <ion-header class="ion-no-border">
-  <div class="menu-container">
-    <img src="./../../../assets/images/wave app.svg" />
+<app-header
+  [title]="'edit profile'"
+  [isEditable]="false"
+  [isMain]="false"
+  [backwardRoute]="'/tabs/profile'"
+></app-header>
 
-    <div class="menu-icon" (click)="openMenu()">
-      <img src="./../../../assets/icon/menu.svg" />
-    </div>
+<ion-content class="ion-padding">
+  <div class="auth-login-register">
+    <ion-card class="auth-container">
+      <form
+        class="auth-form"
+        (ngSubmit)="editProfile()"
+        [formGroup]="profileForm"
+      >
+        <ion-item lines="none" [ngClass]="inputFocusPerson ? 'focused' : 'unfocused' ">
+          <ion-icon
+            item-start
+            color="primary"
+            src="{{inputFocusPerson?inputFocusPersonIcon:inputInFocusPersonIcon}}"
+          ></ion-icon>
+          <ion-input
+            (ionFocus)="focusPerson(true)"
+            (ionBlur)="focusPerson(false)"
+            placeholder="{{'user-name'|translate}}"
+            type="text"
+            formControlName="userName"
+          ></ion-input>
+        </ion-item>
 
-    <div class="menu-title">
-      <p>{{ "edit profile"|translate}}</p>
-    </div>
+        <div
+          class="error-box"
+          *ngIf="isProfileSubmitted && profileErrorControl.userName.errors?.required"
+        >
+          {{'please enter user name' | translate}}
+        </div>
 
-    <div class="back-icon" routerLink="/tabs/profile">
-      <ion-icon name="arrow-forward-outline" color="primary"></ion-icon>
-    </div>
+        <div
+          class="error-box"
+          *ngIf="isProfileSubmitted && profileErrorControl.userName.errors?.minlength"
+        >
+          {{'user name should be min 2 chars long' | translate}}
+        </div>
+
+        <ion-item lines="none" [ngClass]="inputFocusPhone ? 'focused' : 'unfocused' ">
+          <ion-icon
+            item-start
+            color="primary"
+            src="{{inputFocusPhone?inputFocusPhoneIcon:inputInFocusPhoneIcon}}"
+          ></ion-icon>
+          <ion-input
+            (ionFocus)="focusPhone(true)"
+            (ionBlur)="focusPhone(false)"
+            placeholder="{{'phone-number'|translate}}"
+            type="tel"
+            formControlName="phoneNumber"
+          ></ion-input>
+        </ion-item>
+
+        <div
+          class="error-box"
+          *ngIf="isProfileSubmitted && profileErrorControl .phoneNumber.errors?.required"
+        >
+          {{'please enter phone number' | translate}}
+        </div>
+
+        <div
+          class="error-box"
+          *ngIf="isProfileSubmitted && profileErrorControl.phoneNumber.errors?.minlength"
+        >
+          {{'phone number should be 10 numbers' | translate}}
+        </div>
+
+        <ion-item lines="none" [ngClass]="inputFocusEmail ? 'focused' : 'unfocused' ">
+          <ion-icon
+            item-start
+            color="primary"
+            src="{{inputFocusEmail?inputFocusEmailIcon:inputInFocusEmailIcon}}"
+          ></ion-icon>
+          <ion-input
+            (ionFocus)="focusEmail(true)"
+            (ionBlur)="focusEmail(false)"
+            placeholder="{{'email-address'|translate}}"
+            type="email"
+            formControlName="email"
+          ></ion-input>
+        </ion-item>
+
+        <div
+          class="error-box"
+          *ngIf="isProfileSubmitted && profileErrorControl.email.errors?.required "
+        >
+          {{'please enter email' | translate}}
+        </div>
+
+        <div
+          class="error-box"
+          *ngIf="isProfileSubmitted && profileErrorControl.email.errors?.pattern "
+        >
+          {{'please enter valid email' | translate}}
+        </div>
+
+        <ion-button expand="block" type="submit">
+          <span class="auth-btn"> {{ "save"|translate}} </span>
+        </ion-button>
+      </form>
+    </ion-card>
   </div>
-</ion-header> -->
-<app-header [title]="'edit profile'"></app-header>
-
-<ion-content>
-
 </ion-content>
