--- a/src/app/modules/category-list/category-list.page.html
+++ b/src/app/modules/category-list/category-list.page.html
@@ -1,20 +1,7 @@
-<ion-header class="ion-no-border">
-  <div class="menu-container">
-    <img src="./../../../assets/images/wave app.svg" />
 
-    <div class="menu-icon" (click)="openMenu()">
-      <img src="./../../../assets/icon/menu.svg" />
-    </div>
 
-    <div class="menu-title">
-      <p>{{ "categories"|translate}}</p>
-    </div>
+<app-header [title]="'categories'" [isEditable]="false" [backwardRoute]="'/tabs/main'" [isMain]="false"></app-header>
 
-    <div class="back-icon" routerLink="/tabs/main">
-      <ion-icon name="arrow-forward-outline" color="primary"></ion-icon>
-    </div>
-  </div>
-</ion-header>
 
 <ion-content class="ion-padding">
   <ion-card
