--- a/src/global.scss
+++ b/src/global.scss
@@ -42,6 +42,17 @@
 @import "~swiper/css";
 @import "~swiper/css/bundle";
 
+.focused {
+  --border-color: var(--ion-color-primary) !important;
+}
+
+.unfocused {
+  --border-color: var(--ion-color-secondary) !important;
+}
+
+ion-input {
+  --color: var(--ion-color-primary) !important;
+}
 
 .swiper-slide {
   display: block !important;
@@ -203,49 +214,3 @@ ion-tab-bar{
   float: left;
 }
 
-.menu-container {
-  position: relative;
-  img {
-    width: 100%;
-  }
-}
-
-ion-header {
-  .menu-icon {
-    position: absolute;
-    top: 30%;
-    right: 16px;
-    img {
-      width: 40px;
-      height: 40px;
-    }
-  }
-
-  .menu-title {
-    position: absolute;
-    top: 35%;
-    right: 18%;
-    font-size: 18px;
-    color: var(--ion-color-primary);
-    font-weight: bold;
-    p {
-      margin: 0px;
-    }
-  }
-.edit-icon{
-  position: absolute;
-  top: 33%;
-  left: 55px;
-  ion-icon {
-    font-size: 23px;
-  }
-}
-  .back-icon {
-    position: absolute;
-    top: 33%;
-    left: 16px;
-    ion-icon {
-      font-size: 25px;
-    }
-  }
-}
