--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -152,6 +152,10 @@ ion-color-tertiary {
   color: var(--ion-color-secondary) !important;
 }
 
+.white-color {
+  color: var(--ion-color-white) !important;
+}
+
 .dark-black-color{
   color:var(--ion-color-dark-black) !important;
 }
