--- a/src/app/modules/my-reservations/my-reservations.page.html
+++ b/src/app/modules/my-reservations/my-reservations.page.html
@@ -5,4 +5,82 @@
   [isMain]="false"
 ></app-header>
 
-<ion-content> </ion-content>
+<ion-content class="ion-padding">
+  <ion-segment
+    (ionChange)="reservationsTypeChange($event)"
+    value="register"
+    [(ngModel)]="reservationsType"
+  >
+    <ion-segment-button
+      value="old"
+      [ngClass]="reservationsType=='old' ?'selected':'old-unselected'"
+    >
+      <ion-label>{{"old"|translate}}</ion-label>
+    </ion-segment-button>
+
+    <ion-segment-button
+      value="current"
+      [ngClass]="reservationsType=='current' ?'selected':'current-unselected'"
+    >
+      <ion-label>{{"current"|translate}}</ion-label>
+    </ion-segment-button>
+  </ion-segment>
+
+  <div *ngIf="reservationsType=='old'">
+    <ion-card class="ion-no-margin" *ngFor="let item of oldReservations">
+      <div class="container">
+        <img src="./../../../assets/images/1024-500.png" />
+
+        <div class="price">
+          <p>{{item.price}} {{item.unit}} / {{item.perUnit}}</p>
+        </div>
+
+        <div class="title">
+          <p>{{item.name |translate}}</p>
+        </div>
+
+        <div class="location">
+            <ion-icon src="./../../../assets/icon/pin-underline.svg" color="primary"></ion-icon>
+        </div>
+
+        <div class="location-address">
+          <p>{{item.city}} - {{item.country}}</p>
+        </div>
+
+        <div class="rating">
+          <span class="white-color"> {{item.rating}}</span>
+          <ion-icon name="star" color="secondary"></ion-icon>
+        </div>
+      </div>
+    </ion-card>
+  </div>
+
+  <div *ngIf="reservationsType=='current'">
+    <ion-card class="ion-no-margin" *ngFor="let item of currentReservations">
+      <div class="container">
+        <img src="./../../../assets/images/1024-500.png" />
+
+        <div class="price">
+          <p>{{item.price}} {{item.unit}} / {{item.perUnit}}</p>
+        </div>
+
+        <div class="title">
+          <p>{{item.name |translate}}</p>
+        </div>
+
+        <div class="location">
+          <ion-icon src="./../../../assets/icon/pin-underline.svg" color="primary"></ion-icon>
+        </div>
+
+        <div class="location-address">
+          <p>{{item.city}} - {{item.country}}</p>
+        </div>
+
+        <div class="rating">
+          <span class="white-color"> {{item.rating}}</span>
+          <ion-icon name="star" color="secondary"></ion-icon>
+        </div>
+      </div>
+    </ion-card>
+  </div>
+</ion-content>
