--- a/src/app/modules/my-reservations-details/my-reservations-details.page.html
+++ b/src/app/modules/my-reservations-details/my-reservations-details.page.html
@@ -1,9 +1,9 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>my-reservations-details</ion-title>
-  </ion-toolbar>
-</ion-header>
-
+<app-header
+  [title]="'my-reservations-details'"
+  [isEditable]="false"
+  [backwardRoute]="'/tabs/my-reservations'"
+  [isMain]="false"
+></app-header>
 <ion-content>
 
 </ion-content>
