--- a/src/app/modules/my-reservations/my-reservations.page.html
+++ b/src/app/modules/my-reservations/my-reservations.page.html
@@ -27,7 +27,7 @@
   </ion-segment>
 
   <div *ngIf="reservationsType=='old'">
-    <ion-card class="ion-no-margin" *ngFor="let item of oldReservations">
+    <ion-card class="ion-no-margin" *ngFor="let item of oldReservations" routerLink="/tabs/my-reservations-details">
       <div class="container">
         <img src="./../../../assets/images/1024-500.png" />
 
@@ -56,7 +56,7 @@
   </div>
 
   <div *ngIf="reservationsType=='current'">
-    <ion-card class="ion-no-margin" *ngFor="let item of currentReservations">
+    <ion-card class="ion-no-margin" *ngFor="let item of currentReservations" routerLink="/tabs/my-reservations-details">
       <div class="container">
         <img src="./../../../assets/images/1024-500.png" />
 
