--- a/src/app/modules/search-filter/search-filter.page.html
+++ b/src/app/modules/search-filter/search-filter.page.html
@@ -1,8 +1,9 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>search-filter</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header
+  [title]="'search-filter'"
+  [isEditable]="false"
+  [backwardRoute]="'/tabs/main'"
+  [isMain]="false"
+></app-header>
 
 <ion-content>
 
