--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,47 +8,65 @@
     object-fit: cover;
   }
 
-  // .image-right{
-  //   border-radius: 0 0 80px 0 !important;
-  // }
-
-  // .image-left{
-  //   border-radius: 0 0 0 80px  !important;
-  // }
-}
-
-.my-menu-content{
-
-
-.selected{
-  ion-item::part(native){
-    background-image: linear-gradient(to right, var(--ion-color-primary), var(--ion-color-secondary));
-    border-radius: 30px;
-    width: 80%;
-    color: var(--ion-color-white);
+  .image-right{
+    border-radius:  0px 0px  80px 0px !important;
   }
 
+  .image-left{
+    border-radius: 0px 0px 0px 80px !important;
+  }
 }
- 
-  ion-label{
+
+.my-menu-content {
+  //:root[dir="ltr"] {
+    .selectedArabic {
+      ion-item::part(native) {
+        background-image: linear-gradient(
+          to right,
+          var(--ion-color-primary),
+          var(--ion-color-secondary)
+        );
+        border-radius: 30px;
+        width: 80%;
+        color: var(--ion-color-white);
+      }
+    }
+  //}
+
+  // :root[dir="rtl"] {
+    .selectedEnglish {
+      ion-item::part(native) {
+        background-image: linear-gradient(
+          to left,
+          var(--ion-color-primary),
+          var(--ion-color-secondary)
+        );
+        border-radius: 30px;
+        width: 80%;
+        color: var(--ion-color-white);
+      }
+    }
+ // }
+
+  ion-label {
     font-size: 16px;
   }
 
-  .active-item {
-    ion-button::part(native) {
-      height: 40px !important;
-      // background-image: linear-gradient(
-      //   to left,
-      //   var(--ion-color-primary),
-      //   var(--ion-color-secondary)
-      // );
-  
-      // span.button-inner{
-        justify-content: start !important;
-        font-size: 16px;
-      //}
-    }
-  }
+  // .active-item {
+  //   ion-button::part(native) {
+  //     height: 40px !important;
+  //     // background-image: linear-gradient(
+  //     //   to left,
+  //     //   var(--ion-color-primary),
+  //     //   var(--ion-color-secondary)
+  //     // );
+
+  //     // span.button-inner{
+  //     justify-content: start !important;
+  //     font-size: 16px;
+  //     //}
+  //   }
+  // }
 }
 
 ion-button {
