--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,45 +8,57 @@
     object-fit: cover;
   }
 
-  .image-right{
-    border-radius:  0px 0px  80px 0px !important;
+  .image-right {
+    border-radius: 0px 0px 80px 0px !important;
   }
 
-  .image-left{
+  .image-left {
     border-radius: 0px 0px 0px 80px !important;
   }
 }
 
 .my-menu-content {
-  //:root[dir="ltr"] {
-    .selectedArabic {
-      ion-item::part(native) {
-        background-image: linear-gradient(
-          to right,
-          var(--ion-color-primary),
-          var(--ion-color-secondary)
-        );
-        border-radius: 30px;
-        width: 80%;
-        color: var(--ion-color-white);
-      }
+  ion-item {
+    margin-bottom: 8px;
+  }
+  .selected {
+    ion-item::part(native) {
+      background-image: linear-gradient(
+        to left,
+        var(--ion-color-primary),
+        var(--ion-color-secondary)
+      );
+      border-radius: 30px;
+      width: 80%;
+      color: var(--ion-color-white);
     }
-  //}
+  }
 
-  // :root[dir="rtl"] {
-    .selectedEnglish {
-      ion-item::part(native) {
-        background-image: linear-gradient(
-          to left,
-          var(--ion-color-primary),
-          var(--ion-color-secondary)
-        );
-        border-radius: 30px;
-        width: 80%;
-        color: var(--ion-color-white);
-      }
-    }
- // }
+  // .selectedArabic {
+  //   ion-item::part(native) {
+  //     background-image: linear-gradient(
+  //       to right,
+  //       var(--ion-color-primary),
+  //       var(--ion-color-secondary)
+  //     );
+  //     border-radius: 30px;
+  //     width: 80%;
+  //     color: var(--ion-color-white);
+  //   }
+  // }
+
+  // .selectedEnglish {
+  //   ion-item::part(native) {
+  //     background-image: linear-gradient(
+  //       to left,
+  //       var(--ion-color-primary),
+  //       var(--ion-color-secondary)
+  //     );
+  //     border-radius: 30px;
+  //     width: 80%;
+  //     color: var(--ion-color-white);
+  //   }
+  // }
 
   ion-label {
     font-size: 16px;
@@ -69,122 +81,131 @@
   // }
 }
 
-ion-button {
-  width: 70%;
+.logout-section{
+  ion-item {
+    margin-bottom: 8px;
+    ion-icon{
+      font-size: 18px;
+    }
+  }
 }
 
-ion-menu.md ion-content {
-  --padding-start: 8px;
-  --padding-end: 8px;
-  --padding-top: 20px;
-  --padding-bottom: 20px;
-}
+// ion-button {
+//   width: 70%;
+// }
 
-ion-menu.md ion-list {
-  padding: 20px !important;
-}
+// ion-menu.md ion-content {
+//   --padding-start: 8px;
+//   --padding-end: 8px;
+//   --padding-top: 20px;
+//   --padding-bottom: 20px;
+// }
 
-ion-menu.md ion-note {
-  margin-bottom: 30px;
-}
+// ion-menu.md ion-list {
+//   padding: 20px !important;
+// }
 
-ion-menu.md ion-list-header,
-ion-menu.md ion-note {
-  padding-left: 10px;
-}
+// ion-menu.md ion-note {
+//   margin-bottom: 30px;
+// }
 
-ion-menu.md ion-list#inbox-list {
-  border-bottom: 1px solid var(--ion-color-step-150, #d7d8da);
-}
+// ion-menu.md ion-list-header,
+// ion-menu.md ion-note {
+//   padding-left: 10px;
+// }
 
-ion-menu.md ion-list#inbox-list ion-list-header {
-  font-size: 22px;
-  font-weight: 600;
+// ion-menu.md ion-list#inbox-list {
+//   border-bottom: 1px solid var(--ion-color-step-150, #d7d8da);
+// }
 
-  min-height: 20px;
-}
+// ion-menu.md ion-list#inbox-list ion-list-header {
+//   font-size: 22px;
+//   font-weight: 600;
 
-ion-menu.md ion-list#labels-list ion-list-header {
-  font-size: 16px;
+//   min-height: 20px;
+// }
 
-  margin-bottom: 18px;
+// ion-menu.md ion-list#labels-list ion-list-header {
+//   font-size: 16px;
 
-  color: #757575;
+//   margin-bottom: 18px;
 
-  min-height: 26px;
-}
+//   color: #757575;
 
-ion-menu.md ion-item {
-  --padding-start: 10px;
-  --padding-end: 10px;
-  border-radius: 4px;
-}
+//   min-height: 26px;
+// }
 
-ion-menu.md ion-item.selected {
-  --background: rgba(var(--ion-color-primary-rgb), 0.14);
-}
+// ion-menu.md ion-item {
+//   --padding-start: 10px;
+//   --padding-end: 10px;
+//   border-radius: 4px;
+// }
 
-ion-menu.md ion-item.selected ion-icon {
-  color: var(--ion-color-primary);
-}
+// ion-menu.md ion-item.selected {
+//   --background: rgba(var(--ion-color-primary-rgb), 0.14);
+// }
 
-ion-menu.md ion-item ion-icon {
-  color: #616e7e;
-}
+// ion-menu.md ion-item.selected ion-icon {
+//   color: var(--ion-color-primary);
+// }
 
-ion-menu.md ion-item ion-label {
-  font-weight: 500;
-}
+// // ion-menu.md ion-item ion-icon {
+// //   color: #616e7e;
+// // }
 
-ion-menu.ios ion-content {
-  --padding-bottom: 20px;
-}
+// ion-menu.md ion-item ion-label {
+//   font-weight: 500;
+// }
 
-ion-menu.ios ion-list {
-  padding: 20px !important;
-}
+// ion-menu.ios ion-content {
+//   --padding-bottom: 20px;
+// }
 
-ion-menu.ios ion-note {
-  line-height: 24px;
-  margin-bottom: 20px;
-}
+// ion-menu.ios ion-list {
+//   padding: 20px !important;
+// }
 
-ion-menu.ios ion-item {
-  --padding-start: 16px;
-  --padding-end: 16px;
-  --min-height: 50px;
-}
+// ion-menu.ios ion-note {
+//   line-height: 24px;
+//   margin-bottom: 20px;
+// }
 
-ion-menu.ios ion-item.selected ion-icon {
-  color: var(--ion-color-primary);
-}
+// ion-menu.ios ion-item {
+//   --padding-start: 16px;
+//   --padding-end: 16px;
+//   --min-height: 50px;
+// }
 
-ion-menu.ios ion-item ion-icon {
-  font-size: 24px;
-  color: #73849a;
-}
+// ion-menu.ios ion-item.selected ion-icon {
+//   color: var(--ion-color-primary);
+// }
 
-ion-menu.ios ion-list#labels-list ion-list-header {
-  margin-bottom: 8px;
-}
+// ion-menu.ios ion-item ion-icon {
+//   font-size: 24px;
+//   color: #73849a;
+// }
 
-ion-menu.ios ion-list-header,
-ion-menu.ios ion-note {
-  padding-left: 16px;
-  padding-right: 16px;
-}
+// ion-menu.ios ion-list#labels-list ion-list-header {
+//   margin-bottom: 8px;
+// }
 
-ion-menu.ios ion-note {
-  margin-bottom: 8px;
-}
+// ion-menu.ios ion-list-header,
+// ion-menu.ios ion-note {
+//   padding-left: 16px;
+//   padding-right: 16px;
+// }
 
-ion-note {
-  display: inline-block;
-  font-size: 16px;
+// ion-menu.ios ion-note {
+//   margin-bottom: 8px;
+// }
 
-  color: var(--ion-color-medium-shade);
-}
+// ion-note {
+//   display: inline-block;
+//   font-size: 16px;
 
-ion-item.selected {
-  --color: var(--ion-color-primary);
-}
+//   color: var(--ion-color-medium-shade);
+// }
+
+// ion-item.selected {
+//   --color: var(--ion-color-primary);
+// }
