--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,7 +13,8 @@
   }
 
   .image-left {
-    border-radius: 0px 0px 0px 80px !important;
+    border-radius: 0px 0px 80px 0px !important;
+    // border-radius: 0px 0px 0px 80px !important;
   }
 }
 
