--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <ion-app>
   <ion-split-pane contentId="main-content">
-    <ion-menu contentId="main-content">
+    <ion-menu contentId="main-content" menuId="main">
       <ion-header class="header-image ion-no-border">
         <img
           [ngClass]="currentLanguage == 'ar' ? 'image-right' : 'image-left'"
