--- a/src/app/modules/my-reservations-details/my-reservations-details.page.scss
+++ b/src/app/modules/my-reservations-details/my-reservations-details.page.scss
@@ -30,6 +30,9 @@ ion-button::part(native) {
   justify-content: space-between;
   .name, .rating{
     flex-direction: row;
+    h5{
+      margin-top: 10px !important;
+    }
   }
 }
 
