--- a/src/app/modules/about/about.page.html
+++ b/src/app/modules/about/about.page.html
@@ -5,7 +5,24 @@
   [isMain]="false"
 ></app-header>
 <ion-content class="ion-padding">
-<ion-card class="ion-no-margin" >
-  <img src="./../../../assets/images/about-image.svg">
-</ion-card>
+  <ion-card class="ion-no-margin">
+    <div class="logo">
+      <img src="./../../../assets/images/about-image.svg" />
+    </div>
+    <div class="ion-padding content">
+      <p class="fn-14 dalel-Regular gray-black-color">
+        هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي
+        القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع الفقرات في الصفحة
+        التي يقرأها. ولذلك يتم استخدام طريقة لوريم إيبسومهناك حقيقة مثبتة منذ
+        زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على
+        الشكل الخارجي للنص أو شكل توضع الفقرات في الصفحة التي يقرأها. ولذلك يتم
+        استخدام طريقة لوريم إيبسوم هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى
+        المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل
+        توضع الفقرات في الصفحة التي يقرأها. ولذلك يتم استخدام طريقة لوريم
+        إيبسومهناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما
+        سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع الفقرات في
+        الصفحة التي يقرأها. ولذلك يتم استخدام طريقة لوريم إيبسوم
+      </p>
+    </div>
+  </ion-card>
 </ion-content>
